correction header on mobile

--- a/habits/components/full.css
+++ b/habits/components/full.css
@@ -717,7 +717,7 @@ td{
     }
 
     .horizontal-menu li.active {
-        height: 34px;
+        height: 29px;
     }
 
     #last-saved-information{
